Ensure error spinner is aligned

--- a/assets/variant-list.css
+++ b/assets/variant-list.css
@@ -312,6 +312,10 @@ variant-list-remove-button .icon-remove {
     bottom: auto;
   }
 
+  .variant-item .loading-overlay--error {
+    padding-top: 5rem;
+  }
+
   .variant-remove-total .loading-overlay {
     left: 2rem;
     top: 1.2rem;
